--- a/now.json
+++ b/now.json
@@ -1,10 +1,10 @@
 {
     "version": 2,
-    "name": "portfolio-alexandrerivet-2020",
     "public": false,
-    "alias": ["alexandrerivet.com", "alexandrerivet.fr"],
+    "alias": "alexandrerivet.com",
     "github": {
         "enabled": true,
-        "autoAlias": false
+        "autoAlias": false,
+        "silent": true
     }
 }
