--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "alexandrerivet-portfolio-v2020",
-  "version": "1.0.0",
-  "description": "Portfolio 2020",
+  "name": "alexandrerivet-portfolio-v2021",
+  "version": "0.0.1",
+  "description": "Portfolio 2021",
   "main": "index.js",
   "scripts": {
     "dev": "next",
     "start": "next start",
     "build": "next build",
-    
-    "deploy:local-dev": "now dev",
-    "deploy:prod": "now --prod",
-    "deploy:staging": "now --target=staging",
-    "deploy:dev": "CURL -X POST https://api.zeit.co/v1/integrations/deploy/QmUt373ecN5M5ARVTL5DEvVtcdoL78xPNS4h4ATC4GAhQu/yx2ILxLQD6"
+    "deploy:local-dev": "vercel dev",
+    "deploy:prod": "vercel --prod",
+    "deploy:staging": "vercel --target=staging"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AlexandreRivet/alexandrerivet-portfolio-v2020.git"
+    "url": "git+https://github.com/AlexandreRivet/alexandrerivet-portfolio-v2021.git"
   },
   "keywords": [
     "NextJS",
@@ -24,14 +22,20 @@
     "ThreeJS"
   ],
   "author": "Alexandre Rivet",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AlexandreRivet/alexandrerivet-portfolio-v2020/issues"
+    "url": "https://github.com/AlexandreRivet/alexandrerivet-portfolio-v2021/issues"
   },
-  "homepage": "https://github.com/AlexandreRivet/alexandrerivet-portfolio-v2020#readme",
+  "homepage": "https://github.com/AlexandreRivet/alexandrerivet-portfolio-v2021#readme",
   "dependencies": {
-    "next": "^9.2.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "next": "^10.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "three": "^0.128.0"
+  },
+  "devDependencies": {
+    "@types/node": "^15.3.0",
+    "@types/react": "^17.0.5",
+    "typescript": "^4.2.4"
   }
 }
