--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,7 @@
   "description": "Portfolio d'Alexandre Rivet",
   "theme_color": "#ffffff",
   "background_color": "#000000",
-  "start_url": "/?utm_source=web_app_manifest",
-  "display": "standalone"
+  "start_url": "/",
+  "display": "standalone",
+  "orientation": "portrait"
 }
