--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/AlexandreRivet/alexandrerivet-portfolio-v2021#readme",
   "dependencies": {
     "next": "^10.2.0",
+    "next-pwa": "^5.2.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "three": "^0.128.0"
