--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@types/node": "^15.3.0",
     "@types/react": "^17.0.5",
+    "@types/three": "^0.128.0",
     "typescript": "^4.2.4"
   }
 }
